fix flashing wrong font issue

--- a/src/styles/sakura.scss
+++ b/src/styles/sakura.scss
@@ -8,7 +8,6 @@
 
 html {
     font-size: 62.5%; // So that root size becomes 10px
-    font-family: $font-family-base;
 }
 
 body {
@@ -43,7 +42,6 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
     line-height: 1.1;
-    font-family: $font-family-heading;
     font-weight: 700;
     margin-top: 3rem;
     margin-bottom: 1.5rem;
@@ -74,9 +72,9 @@ a {
     text-decoration: none;
     color: $color-blossom;
 
-    &:visited {
+    /*&:visited {
         color: darken($color-blossom, 10%);
-    }
+    } */
 
     &:hover {
         color: $color-fade;
