--- a/src/styles/themes/orange.scss
+++ b/src/styles/themes/orange.scss
@@ -7,7 +7,4 @@ $color-bg-alt: #000000;
 $color-text: #D9E2EC;
 $font-size-base: 2.16rem;
 
-$font-family-base: "Aleo", serif;
-$font-family-heading: "Poppins", sans-serif;
-
 @import "../custom.scss";
